trunk/Archive2/01/a51d7ed1f3d284/output
main.cpp:7:16: error: functions that differ only in their return type cannot be overloaded
    static int foo(){ return 0; }
           ~~~ ^
main.cpp:5:17: note: previous declaration is here
    static void foo(){ }
           ~~~~ ^
1 error generated.
